[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
env_logger = "*"
itertools = "*"
lazy_static = "*"
log = { version = "*", features = ["std", "serde"] }
ndarray = "*"
sorted-vec = "*"
vec-tree = "*"

thread_profiler = { version = "*", optional = true }

[features]

profiler = ["thread_profiler"]
include_slow = []

[profile.dev]
opt-level = 3

[patch.crates-io]
sorted-vec = { path = "/home/klah/git/rust/sorted-vec" }
